--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 
 add_library(telescope SHARED telescope.cpp)
 
-target_link_libraries(telescope SDL2 SDL2_ttf SDL2_mixer SDL2_image)
+target_link_libraries(telescope SDL2 SDL2_ttf SDL2_mixer SDL2_image SDL2_net)
 target_link_libraries(telescope vulkan)
 
 install(TARGETS
