--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "glm"]
 	path = glm
 	url = https://github.com/g-truc/glm.git
-[submodule "vk"]
-	path = vk
-	url = https://github.com/KhronosGroup/Vulkan-Headers.git
 [submodule "SDL2"]
 	path = SDL2
 	url = https://github.com/libsdl-org/SDL.git
@@ -22,3 +19,6 @@
 [submodule "SDL2_image"]
 	path = SDL2_image
 	url = https://github.com/libsdl-org/SDL_image.git
+[submodule "vulkan"]
+	path = vulkan
+	url = https://github.com/KhronosGroup/Vulkan-Headers.git
