--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(telescope)
 
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.13)
+cmake_policy(SET CMP0077 NEW)
 set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
@@ -8,14 +9,12 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_subdirectory(SDL2)
 add_subdirectory(SDL2_image)
 add_subdirectory(SDL2_mixer)
-add_subdirectory(SDL2_ttf)
 add_subdirectory(glm)
-add_subdirectory(vulkan)
 add_subdirectory(shaderc)
 
 add_library(telescope SHARED telescope.cpp)
 
-target_link_libraries(telescope SDL2 SDL2_image SDL2_mixer SDL2_ttf glm vulkan shaderc)
+target_link_libraries(telescope SDL2 SDL2_image SDL2_mixer glm vulkan shaderc)
 
 install(TARGETS
 telescope
