--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 add_library(telescope SHARED telescope.cpp)
-
+target_include_directories(telescope SYSTEM PRIVATE /usr/include)
+target_link_directories(telescope PRIVATE /usr/lib)
 target_link_libraries(telescope SDL2 SDL2_image SDL2_mixer SDL2_net SDL2_ttf vulkan shaderc_shared)
 
 install(TARGETS
