building with bullet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,13 @@ include(GNUInstallDirs)
 
 add_library(telescope SHARED telescope.cpp)
 
-target_link_libraries(telescope PRIVATE SDL2 SDL2_image SDL2_mixer SDL2_net SDL2_ttf shaderc_shared)
+find_package(Bullet REQUIRED)
+
+target_include_directories(telescope PRIVATE ${BULLET_INCLUDE_DIRS})
+target_link_libraries(telescope PRIVATE 
+  SDL2 SDL2_image SDL2_mixer SDL2_net SDL2_ttf 
+  ${BULLET_LIBRARIES}
+  shaderc_shared)
 
 install(FILES telescope.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
