broke the build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,17 +9,11 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 include(GNUInstallDirs)
 
-add_library(telescope SHARED telescope.cpp)
+add_subdirectory(src)
 
-find_package(Bullet REQUIRED)
+file(GLOB INCLUDE_FILES src/*.h)
 
-target_include_directories(telescope PRIVATE ${BULLET_INCLUDE_DIRS})
-target_link_libraries(telescope PRIVATE 
-  SDL2 SDL2_image SDL2_mixer SDL2_net SDL2_ttf 
-  ${BULLET_LIBRARIES}
-  shaderc_shared)
-
-install(FILES telescope.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES ${INCLUDE_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(TARGETS
 telescope
