--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,12 +4,12 @@ target_include_directories(telescope PUBLIC .)
 
 find_package(Bullet REQUIRED)
 find_package(SDL2 REQUIRED)
-find_library(shaderc_shared REQUIRED NAMES shaderc_shared PATHS /home/clem/Desktop/install/lib)
+find_library(shaderc_shared REQUIRED) # NAMES libshaderc_shared.so PATHS /home/clem/Desktop/shaderc/lib)
 
 target_include_directories(telescope PRIVATE
     "${BULLET_INCLUDE_DIRS}"
     "../VulkanMemoryAllocator-Hpp"
-    /home/clem/Desktop/install/include
+    #/home/clem/Desktop/shaderc/include
 )
 
 target_link_libraries(telescope PRIVATE
@@ -19,6 +19,5 @@ target_link_libraries(telescope PRIVATE
     SDL2_net
     SDL2_ttf
     "${BULLET_LIBRARIES}"
-    shaderc_shared
-    ~/Desktop/
+    ${shader_c_shared}
 )
