These changes get it to build on my machine. We may need to come up with a compromise wrt shaderc being installed globally or not.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ target_include_directories(telescope PUBLIC .)
 
 find_package(Bullet REQUIRED)
 find_package(SDL2 REQUIRED)
-find_library(shaderc_shared REQUIRED) # NAMES libshaderc_shared.so PATHS /home/clem/Desktop/shaderc/lib)
+#find_library(shaderc_shared REQUIRED) # NAMES libshaderc_shared.so PATHS /home/clem/Desktop/shaderc/lib)
 
 target_include_directories(telescope PRIVATE
     "${BULLET_INCLUDE_DIRS}"
@@ -19,5 +19,5 @@ target_link_libraries(telescope PRIVATE
     SDL2_net
     SDL2_ttf
     "${BULLET_LIBRARIES}"
-    ${shader_c_shared}
+    shaderc_shared
 )
