move bt stuff to stack

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,12 +4,10 @@ target_include_directories(telescope PUBLIC .)
 
 find_package(Bullet REQUIRED)
 find_package(SDL2 REQUIRED)
-#find_library(shaderc_shared REQUIRED) # NAMES libshaderc_shared.so PATHS /home/clem/Desktop/shaderc/lib)
 
 target_include_directories(telescope PRIVATE
-    "${BULLET_INCLUDE_DIRS}"
+    ${BULLET_INCLUDE_DIRS}
     "../VulkanMemoryAllocator-Hpp"
-    #/home/clem/Desktop/shaderc/include
 )
 
 target_link_libraries(telescope PRIVATE
@@ -18,6 +16,6 @@ target_link_libraries(telescope PRIVATE
     SDL2_mixer
     SDL2_net
     SDL2_ttf
-    "${BULLET_LIBRARIES}"
+    ${BULLET_LIBRARIES}
     shaderc_shared
 )
