--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,25 @@ project(telescope)
 
 cmake_minimum_required(VERSION 3.13)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_MACOSX_RPATH 1)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(BUILD_SHARED_LIBS ON)
 
 include(GNUInstallDirs)
 
+# bullet
+set(USE_DOUBLE_PRECISION OFF)
+set(BUILD_PYBULLET OFF)
+set(BUILD_UNIT_TESTS OFF)
+set(BUILD_CPU_DEMOS OFF)
+set(BUILD_OPENGL3_DEMOS OFF)
+set(BUILD_BULLET2_DEMOS OFF)
+set(BUILD_EXTRAS OFF)
+add_subdirectory(bullet3)
+
+# telescope
 add_subdirectory(src)
 
 file(GLOB INCLUDE_FILES src/*.h)
