--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(Sphinx REQUIRED)
 # Find all the public headers
 #get_target_property(TELESCOPE_INCLUDE_DIR telescope INTERFACE_INCLUDE_DIRECTORIES)
 set(TELESCOPE_INCLUDE_DIR "./src")
-file(GLOB_RECURSE TELESCOPE_INCLUDE_DIR ${TELESCOPE_INCLUDE_DIR}/*.h)
+file(GLOB_RECURSE TELESCOPE_INCLUDE_DIR ${TELESCOPE_INCLUDE_DIR}/*)
 
 # configure doxygen
 set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/src)
