--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -9,7 +9,7 @@ set(TELESCOPE_INCLUDE_DIR "./src")
 file(GLOB_RECURSE TELESCOPE_INCLUDE_DIR ${TELESCOPE_INCLUDE_DIR}/*)
 
 # configure doxygen
-set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/src)
+set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/include)
 set(DOXYGEN_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/docs/.doxygen)
 set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/docs/.doxygen/xml/index.xml)
 set(DOXYFILE_IN "${PROJECT_SOURCE_DIR}/docs/Doxyfile.in")
