ARCH LINUX RULES BAYBEE

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,11 @@ add_library(telescope SHARED telescope.cpp telescope.h)
 
 target_include_directories(telescope PUBLIC .)
 
+find_package(Bullet REQUIRED)
 find_package(SDL2 REQUIRED)
 
 target_include_directories(telescope PRIVATE
-    "../bullet3"
-    "../bullet3/src"
+    ${BULLET_INCLUDE_DIRS}
     "../VulkanMemoryAllocator-Hpp/include"
 )
 
@@ -16,29 +16,6 @@ target_link_libraries(telescope PRIVATE
     SDL2_mixer
     SDL2_net
     SDL2_ttf
-    # UUUUUUUGH
-    BulletFileLoader
-    Bullet2FileLoader
-    Bullet3Collision
-    Bullet3Common
-    Bullet3Dynamics
-    Bullet3Geometry
-    Bullet3OpenCL_clew
-    BulletCollision
-    BulletDynamics
-    BulletInverseDynamics
-    BulletInverseDynamicsUtils
-    BulletWorldImporter
-    BulletRobotics
-    BulletRoboticsGUI
-    OpenGLWindow
-    BulletSoftBody
-    ConvexDecomposition
-    GIMPACTUtils
-    HACD
-    LinearMath
-    gwen
-    BussIK
-    clsocket
+    ${BULLET_LIBRARIES}
     shaderc_shared
 )
