--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .vscode
 build
+
+# https://raw.githubusercontent.com/github/gitignore/main/CMake.gitignore
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -7,7 +9,11 @@ CMakeScripts
 Testing
 Makefile
 cmake_install.cmake
+cmake_uninstall.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# C++ # Compiled Dynamic libraries
+*.so
