--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -19,12 +19,12 @@ jobs:
         submodules: 'true'
     - name: 🧱 Install build dependencies
       run: |
-        wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | apt-key add -
+        wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
         wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
-        apt update && apt install --upgrade cmake
-        apt install --upgrade libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libsdl2-net-dev
-        apt install --upgrade vulkan-sdk
-        apt install --upgrade libbullet-dev libglm-dev shaderc
+        sudo apt update && sudo apt install --upgrade cmake
+        sudo apt install --upgrade libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libsdl2-net-dev
+        sudo apt install --upgrade vulkan-sdk
+        sudo apt install --upgrade libbullet-dev libglm-dev shaderc
     - name: 🦏 Build
       run: |
         cmake .
