Sudo the wget ow the apt source

--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: 🧱 Install build dependencies
       run: |
         wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
-        wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
+        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
         sudo apt update && sudo apt install --upgrade cmake
         sudo apt install --upgrade libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libsdl2-net-dev
         sudo apt install --upgrade vulkan-sdk
