--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -30,7 +30,13 @@ jobs:
         cmake .
         make clean
         make
+    - name: Unit tests
+      run: echo TODO
+    # Only upload the build and use it in the subsequent job if this is a PR, push to _Main_ or a dispatch
     - name: 🆙 Upload compiled source
+      if: >- 
+        ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' ||
+        (github.event_name == 'push' && github.event.ref == 'refs/heads/main') }}
       uses: actions/upload-artifact@v3
       with:
         name: libtelescope-pretest
@@ -39,6 +45,9 @@ jobs:
   test:
     name: Test the build
     needs: [build]
+    if: >- 
+      ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'push' && github.event.ref == 'refs/heads/main') }}
     runs-on: ubuntu-latest
     steps:
     - name: 🏁 Checkout
@@ -50,5 +59,5 @@ jobs:
       with:
         name: libtelescope-pretest
         path: lib
-    - name: Test the build
+    - name: Integration tests
       run: echo TODO
