added /out to the github repo

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 VulkanMemoryAllocator-Hpp/
-docs/out/
+#docs/out/
 docs/Doxyfile
 docs/.doxygen
 .idea/
