--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "VulkanMemoryAllocator-Hpp"]
 	path = VulkanMemoryAllocator-Hpp
-	url = https://github.com/EIP-Pivot/VulkanMemoryAllocator-Hpp.git
+	url = https://github.com/malte-v/VulkanMemoryAllocator-Hpp
