--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-#docs/out/
+docs/out/
 docs/Doxyfile
 docs/.doxygen
 .idea/
