--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -45,4 +45,4 @@ add_custom_command(OUTPUT ${SPHINX_INDEX_FILE}
 add_custom_target(build_docs ALL DEPENDS ${SPHINX_INDEX_FILE})
 
 # install
-install(DIRECTORY ${SPHINX_BUILD} DESTINATION ${CMAKE_INSTALL_DOCDIR})
+#install(DIRECTORY ${SPHINX_BUILD} DESTINATION ${CMAKE_INSTALL_DOCDIR})
