added temporary debug target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ target_link_libraries(telescope PUBLIC
 
 ### TESTS ####
 
-option(BUILD_TESTS "build telescope unit tests" ON)
+option(BUILD_TESTS  "build telescope unit tests" ON)
 if (BUILD_TESTS)
 
     # \brief: declare a test
@@ -142,6 +142,9 @@ if (BUILD_TESTS)
     endfunction()
 
     #declare_test(template_test)
+
+    # TODO
+    declare_test(temp_test)
 
     declare_test(test_common)
     declare_test(test_bullet)
