--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -32,33 +32,12 @@ jobs:
         cmake .. -DSHADERC_LIB_DIR=/usr/lib/x86_64-linux-gnu -DCMAKE_INSTALL_PREFIX=..
         make clean && make install
     - name: 🧪 Unit tests
-      run: cd build && ctest -N && ctest -V
-    # Only upload the build and use it in the subsequent job if this is a PR, push to _Main_ or a dispatch
+      run: cd build && make test ARGS="-N" && make test ARGS="-V"
+    # Only upload the build if this is a push to _Main_ or a dispatch (PRs shouldn't need this, they only need the above test)
     - name: 🆙 Upload compiled source
-      if: >- 
-        ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' ||
-        (github.event_name == 'push' && github.event.ref == 'refs/heads/main') }}
+      if: ${{ (github.event_name == 'push' && github.event.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch' }}
       uses: actions/upload-artifact@v3
       with:
         name: libtelescope-pretest
         path: lib/libtelescope.so
         if-no-files-found: error
-  # test-built-dist:
-  #   name: Test the built Telescope 🔭 *.so
-  #   needs: [build]
-  #   if: >- 
-  #     ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' ||
-  #     (github.event_name == 'push' && github.event.ref == 'refs/heads/main') }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: 🏁 Checkout
-  #     uses: actions/checkout@v3
-  #     with:
-  #       submodules: 'true'
-  #   - name: 🆒 Download dists
-  #     uses: actions/download-artifact@v3
-  #     with:
-  #       name: libtelescope-pretest
-  #       path: lib
-  #   - name: 🧪 Integration tests
-  #     run: echo TODO
